--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,5 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v5.5.1 # use the explicit version number
         with:
-          command-prefix: npm run
-          command: cy
+          build: npm run build
+          start: npm start
