--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "cy": "cypress open",
+    "cypress": "cypress open",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
