--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
@@ -16,7 +17,9 @@ jobs:
         with:
           build: npm run build
           start: npm start
-- name: Deploy to Heroku
+
+      # Add a step to deploy to Heroku
+      - name: Deploy to Heroku
         run: |
           # Login to Heroku
           heroku login -i
