Edited YML file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v5.5.1 # use the explicit version number
         with:
-          build: npm run build
-          start: npm start
+          start: npm run cypress
 
       # Add a step to deploy to Heroku
       - name: Deploy to Heroku
