Edited YML file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Cypress Tests
+name: Cypress Tests and Heroku Deployment
 
 on: [push]
 
@@ -13,15 +13,18 @@ jobs:
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
-        uses: cypress-io/github-action@v5.5.1 # use the explicit version number
+        uses: cypress-io/github-action@v5.5.1
         with:
-          start: npm cypress
+          start: npm run cypress run
 
       # Add a step to deploy to Heroku
       - name: Deploy to Heroku
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
         run: |
+          # Login to Heroku
+          heroku login -i
+
           # Set up Heroku git remote
           heroku git:remote -a tddah-fe
 
