--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "cypress": "cypress open",
+    "cypress run": "cypress run",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
