this is impossible

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
         run: |
           # Set up Heroku git remote
-          heroku git:remote -a tddah-fe
+          git remote add heroku https://$HEROKU_API_KEY@git.heroku.com/tddah-fe.git
 
           # Push changes to Heroku
           git push heroku HEAD:main
